--- a/apps/spreadsheeteditor/mobile/resources/less/statusbar.less
+++ b/apps/spreadsheeteditor/mobile/resources/less/statusbar.less
@@ -47,10 +47,11 @@
   ul {
     margin: 0;
     padding: 0;
-    white-space: pre;
+    white-space: nowrap;
     overflow: hidden;
 
     > li {
+      line-height: @statusBarHeight;
       list-style: none;
       display: inline-block;
       position: relative;
