--- a/apps/common/main/resources/less/combobox.less
+++ b/apps/common/main/resources/less/combobox.less
@@ -55,7 +55,7 @@
         background-color: @background-normal;
         border-color: @border-regular-control-ie;
         border-color: @border-regular-control;
-        padding-right: 4px;
+        padding-right: 6px;
     }
 
     .btn-default.disabled {
@@ -76,7 +76,7 @@
             border-color: @border-control-focus;
 
             .caret {
-                transform: rotate(45deg);
+                transform: rotate(45deg) translate(1px, 1px);
             }
         }
     }
