--- a/apps/common/main/resources/less/spinner.less
+++ b/apps/common/main/resources/less/spinner.less
@@ -70,13 +70,15 @@
 
     .spinner-up {
         i {
-            transform: rotate(45deg) translate(-1px,-1px);
+            transform: rotate(45deg);
+            margin: 0 0 2px 1px;
         }
     }
 
     .spinner-down {
         i {
-            transform: rotate(-135deg) translate(2px,2px);
+            transform: rotate(-135deg);
+            margin: 0 0 3px 1px;
         }
     }
 }
